testing another way of making the carousel not jump up when nav goes "fixed at top"

--- a/Style/mainStyle.css
+++ b/Style/mainStyle.css
@@ -27,7 +27,11 @@ img {
   padding: 2.5rem 0;
 }
 
-#nav-main {
-  margin-bottom: -56px;
+/*#nav-main {
+  margin-top: -56px;
   z-index: 100;
+}*/
+
+#carousel{
+  background: #353a40;
 }
